--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
       <div class="full-page">
         <div class="text-contact">
           <h2>Let's Get in Touch!!</h2>
-          <p><b>E-mail</b> : kartikeysaxena2030@gmail.com</p>
+          <p><b>E-mail</b> : kartikeysaxena_co21a4_55@dtu.com</p>
           <p><b>Visiting Address</b>: Delhi Technological University,<br>Shahbad Daulatpur,<br>Main Bawana Road,<br>New Delhi - 110042</p>
           <p><b>LinkedIn: </b><a href="https://www.linkedin.com/in/kartikey-saxena/">https://www.linkedin.com/in/kartikey-saxena/</a></p>
           <p><b>GitHub:</b><a href="https://github.com/Kartikey3107">https://github.com/Kartikey3107</a></p>
