--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h3>Hello, It's me</h3>
         <h1>Kartikey Saxena</h1>
         <h3>And I'm a <span class="multiple-text"></span></h3>
-        <p>I am currently pursuing Bachelors of Technology in Computer Engineering from Delhi Technological University (Formerly known as DCE).</p>
+        <p>I am currently pursuing Bachelor of Technology in Computer Engineering from Delhi Technological University (Formerly known as DCE).</p>
         <p>Welcome to My Portfolio, where you can embark on a visual showcase offering a glimpse into my professional journey and achievements.</p>
         <div class="social-media">
           <a href="https://github.com/PixelPirate-Kartikey"><i class='bx bxl-github' ></i></a>
@@ -48,20 +48,20 @@
       </div>
 
       <div class="home-img">
-        <img src="images/home.png" alt="home Img">
+        <img src="home.png" alt="home Img">
       </div>
     </section>
 
     <!-- about section design -->
     <section class="about" id="about">
       <div class="about-img">
-        <img src="images/about.png" alt="About Img">
+        <img src="about.png" alt="About Img">
       </div>
 
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Frontend Developer</h3>
-        <p>Welcome to my portfolio website! I am a passionate Computer Engineering student with a strong focus on software development and web development. Currently pursuing my Bachelor of Technology degree at Delhi Technological University, I am eager to explore new opportunities and contribute to impactful projects.</p>
+        <p>Welcome to my portfolio website! I am a passionate Computer Engineering student with a strong focus on software and web development. I am eager to explore new opportunities and contribute to impactful projects while pursuing my Bachelor of Technology degree at Delhi Technological University.</p>
         <p>With a love for coding and problem-solving, I have dedicated my time to enhancing my skills and knowledge in various areas. From software development to web development, I am constantly seeking new challenges to grow as a professional.</p>
         <div class="extra-text" style="display: none;">
           <p>Outside of academics and work, I enjoy exploring new technologies and keeping up with the latest trends in the software development industry. I am always eager to collaborate with like-minded individuals and contribute to the creation of innovative and user-centric software solutions.</p>
